--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <header></header>
     <main>
         <div class="bg_intro" id="bg_intro">
-            <div class="blur"><img id = "blurImg" src="img/a2.jpg"></div>
+            <div class="blur"><img id = "blurImg" src=""></div>
             <mask id="svgmask">
                 <circle id="svg__circle" class="svg__circle" cx="960" cy="468.5" r="48" style="fill: #fff;"></circle>
             </mask>
-            <div class="bg_mask" id="bg_mask"><img id = "introImg" src="img/a1.jpg"></div>
+            <div class="bg_mask" id="bg_mask"><img id = "introImg" src=""></div>
             <div class="rotate_text" id="rotate_text"><img src="img/recruit3.svg"></div>
         </div>
     </main>
