--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
             <div class="bg_mask" id="bg_mask"><img id = "introImg" src=""></div>
             <div class="rotate_text" id="rotate_text"><img src="img/recruit3.svg"></div>
         </div>
+        <div class="scroll_ani">
+            <div></div>
+        </div>
+        <div class="font_dumy">
+            <div class="font_wrap">
+                <div class="font1"><img src="img/recruit1.svg"></div>
+                <div class="font2"><img src="img/recruit2.svg"></div>
+            </div>
+        </div>
     </main>
     <footer></footer>
 </body>
